--- a/PruebasSecurity/src/main/resources/templates/login.html
+++ b/PruebasSecurity/src/main/resources/templates/login.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="www.thymeleaf.org" xmlns:sec="www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<meta charset="UTF-8">
+<title>Spring Security</title>
 </head>
 <body>
-
+	
+	<div th:if="${param.error}">
+		Usuario o password inválido.
+	</div>
+	<div th:if="${param.logout}">
+		Ha salido del sistema.
+	</div>
+	
+	<form th:action="@{/j_spring-security_check}" method="post">
+		<div><label>Usuario : </label><input type="text" name="username"></div>
+		<div><label>Contraseña : </label><input type="password" name="passworda"></div>
+	</form>
 </body>
 </html>
