--- a/PruebasSecurity/src/main/resources/templates/logout.html
+++ b/PruebasSecurity/src/main/resources/templates/logout.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="www.thymeleaf.org" xmlns:sec="www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<meta charset="UTF-8">
+<title>Logout</title>
 </head>
 <body>
-
+	<form th:action="@{logout}" method="post">
+		<input type="submit" value="Cerrar Sesion">
+	</form>
 </body>
 </html>
