Comienzo del proyecto final

--- a/PruebasSecurity/src/main/resources/templates/login.html
+++ b/PruebasSecurity/src/main/resources/templates/login.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html xmlns:th="www.thymeleaf.org" xmlns:sec="www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-<head>
-<meta charset="UTF-8">
-<title>Spring Security</title>
-</head>
-<body>
-	
-	<div th:if="${param.error}">
-		Usuario o password inválido.
-	</div>
-	<div th:if="${param.logout}">
-		Ha salido del sistema.
-	</div>
-	
-	<form th:action="@{/j_spring-security_check}" method="post">
-		<div><label>Usuario : </label><input type="text" name="username"></div>
-		<div><label>Contraseña : </label><input type="password" name="passworda"></div>
-	</form>
-</body>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+    <head>
+        <title>Spring Security</title>
+    </head>
+    <body>
+         <div th:if="${param.error}">
+            Usuario o password invalidos.
+        </div>
+        <div th:if="${param.logout}">
+            Has hecho logout.
+        </div>
+        <form th:action="@{/login}" method="post">
+            <div><label> Usuario: <input type="text" name="username"/> </label></div>
+            <div><label> Password: <input type="password" name="password"/> </label></div>
+            <div><input type="submit" value="logueate"></div>
+        </form>
+    </body>
 </html>
