--- a/PruebasSecurity/src/main/resources/templates/registrado/r.html
+++ b/PruebasSecurity/src/main/resources/templates/registrado/r.html
@@ -5,9 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<a th:href="@{/registrado}">registrado</a>
-<a th:href="@{/admin}">admin</a>
-<a th:href="@{/logout}">logout</a>
-
+<h1> Soy registrado</h1>
+<a th:href="@{/index}">Volver</a>
 </body>
 </html>
