--- a/PruebasSecurity/src/main/resources/templates/logout.html
+++ b/PruebasSecurity/src/main/resources/templates/logout.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html xmlns:th="www.thymeleaf.org" xmlns:sec="www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-<head>
-<meta charset="UTF-8">
-<title>Logout</title>
-</head>
-<body>
-	<form th:action="@{logout}" method="post">
-		<input type="submit" value="Cerrar Sesion">
-	</form>
-</body>
+<html xmlns:th="http://www.thymeleaf.org"  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+    <head>
+        <title>Spring Security</title>
+    </head>
+    <body>
+          <form  th:action="@{/logout}" method="post">
+            <input type="submit" value="logout"/>
+        </form>
+    </body>
 </html>
