--- a/TareaFinalDawes/src/main/resources/templates/proveedor.html
+++ b/TareaFinalDawes/src/main/resources/templates/proveedor.html
@@ -13,6 +13,6 @@
 			<td>Fecha: <span th:text="fecha"></span></td>
 		</tr>
 	</table>
-	<a th:href="index">Volver al índice</a>
+	<p><a th:href="@{index}">Volver al índice</a></p>
 </body>
 </html>
